# Kimigayo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKERHUB_README.md  Dockerfile  Dockerfile.runtime  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SPECIFICATION.md  UPDATES.md  config.mk  docker-compose.yml  pytest.ini  spec.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  security-vulnerability.md  (+1 more)
LICENSES/: BSD-2-Clause.txt  GPL-2.0.txt  MIT.txt
benchmark-results/: BENCHMARK_REPORT.md  benchmark-memory.json  benchmark-size.json  benchmark-startup.json  comparison_20251230_223633.txt  comparison_20251230_224501.json  comparison_20251230_224501.md  comparison_20251230_224501.txt
build-system/: Makefile  meson-cross-aarch64.txt
docs/: RELEASE_CHECKLIST.md  V1_RELEASE_PLAN.md
examples/: README.md
repository/: README.md
scripts/: apply-busybox-patches.sh  apply-kernel-patches.sh  benchmark-all.sh  benchmark-busybox.sh  benchmark-comparison.sh  benchmark-lifecycle.sh  benchmark-memory.sh  benchmark-report.sh  benchmark-size.sh  benchmark-startup.sh  build-busybox.sh  build-docker-image.sh  build-image.sh  build-isn.sh  build-kernel.sh  build-musl.sh  build-openrc.sh  build-rootfs.sh  build-status.sh  download-busybox.sh  download-kernel.sh  download-musl.sh  download-openrc.sh  generate-changelog.sh  get-version.sh  patch-busybox-vi.sh  setup-cross-compile.sh  show-version.sh  test-busybox-integration.sh  test-kernel-qemu.sh  test-musl-integration.sh  test-openrc-integration.sh  verify-kernel-build.sh  verify-kernel-security.sh
src/: __init__.py
src/libc/: musl.py  (+1 more)
src/pkg/isn/: Cargo.toml  README.md
src/pkg/isn/src/: commands.rs  config.rs  database.rs  error.rs  main.rs  package.rs
tests/: README.md  conftest.py
(+223 files in other folders)
