[package]
name = "isn"
version = "0.1.0"
edition = "2021"
authors = ["Kimigayo OS Team"]
description = "Kimigayo OS Package Manager"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
sha2 = "0.10"
# Revert to ed25519-dalek 2.0 (now using rustup with newer Rust)
ed25519-dalek = "2.0"
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary
